kube_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: support-labelling-webhook
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: support-labelling-webhook
        version: "0.1"
    spec:
      containers:
      - name: support-labelling-webhook
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/cloud-platform/support-labelling-webhook:v0.1
        ports:
        - containerPort: 80
